--- a/template.html
+++ b/template.html
@@ -9,55 +9,7 @@
   </head>
   <body>
     <div id="app">
-      <style>
-        #loading {
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          z-index: 999;
-          background: #fff;
-        }
-        @keyframes circle-dash {
-          0% {
-            stroke-dasharray: 1, 125;
-            stroke-dashoffset: 0;
-          }
-          50% {
-            stroke-dasharray: 100, 125;
-            stroke-dashoffset: -25px;
-          }
-          100% {
-            stroke-dasharray: 100, 125;
-            stroke-dashoffset: -125px;
-          }
-        }
-        @keyframes rotate {
-          0% {
-            transform: rotate(0);
-          }
-          100% {
-            transform: rotate(360deg);
-          }
-        }
-        .circular {
-          animation: rotate 2s linear infinite;
-          width: 42px;
-          height: 42px;
-          position: absolute;
-          top: calc(50% - 21px);
-          left: calc(50% - 21px);
-        }
-        circle {
-          animation: circle-dash 2s ease-in-out infinite;
-        }
-      </style>
-      <div id="loading">
-        <svg class="circular" viewBox="0 0 50 50">
-          <circle cx="25" cy="25" r="20" fill="none" stroke="#ff5722" stroke-width="5%" />
-        </svg>
-      </div>
+        Loading...
     </div>
   </body>
 </html>
